Handle new I2L pattern, IR tests, Rewiring pattern inputs to MulVL further optimizes JIT code